--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,23 @@
 body{
     margin: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lato', sans-serif;
+}
+.bigger{
+    font-size: 45px;
+    color:#504e4e;
+}
+.clr-deco{
+    color: gray;
 }
 span{
     color: chartreuse;
 }
 .ordr-btn{
-    background-image: linear-gradient(red,orange);
-    border-radius: 4px;
-    padding: 3px 6px;
-    border: coral;
+    padding: 2%;
     text-decoration: none;
+    color: #1e2b1e;
+    border-radius: 8px;
+    background-image: linear-gradient(yellow,greenyellow);
 }
 .first-sec{
     display: flex;
@@ -23,6 +30,36 @@ span{
     width: 100%;
 }
 .text-part{
-    padding-top: 10%;
-    padding-right: 10%;
+    padding-top: 5%;
+    padding-right: 5%;
+    width: 500px;
+    padding-left: 20px; 
 }
+
+.secound-sec{
+    background-image: url(../image/7.png);
+    display: flex;
+    padding-left: 15%;
+    margin-top: 8%;
+    background-repeat: no-repeat;
+}
+.image-part img{
+    height: 500px;
+    width: 300px;
+}
+.txt-prt{
+    width: 300px;
+    padding-top: 8%;
+}
+.pera-deco{
+    color: #3a3a3a;
+    margin-bottom: 30%;
+}
+.cntac-btn{
+    padding: 20px 30px;
+    text-decoration: none;
+    color: honeydew;
+    border-radius: 35px;
+    background-image: linear-gradient(#ff8828,rgb(202, 141, 29));
+}
+
