--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 .bigger{
     font-size: 45px;
-    color:#504e4e;
+    color:#3f3f3f;
 }
 .clr-deco{
     color: gray;
@@ -64,4 +64,45 @@ span{
 }
 .center{
     text-align: center;
+    color: #3f3f3f;
+    font-size: 30px;
+    margin-top: 7%;
+}
+.about-us{
+    margin-left: 250px;
+    margin-right: 250px;
+    text-align: justify-all;
+    color: #5f5f5f;
+}
+
+.thrd-sec{
+    display: flex;
+    margin-top: 4%;
+    box-sizing: border-box;
+}
+.box{
+    box-shadow: 
+    border-radius: 10px;
+}
+.box1{
+    width: 28.33%;
+    padding: 2%;
+  
+}
+.box1 img{
+    width: 100%;
+}
+.box2{
+    width: 28.33%;
+    padding: 2%;;
+}
+.box2 img{
+    width: 100%;
+}
+.box3{
+    width: 28.33%;
+    padding: 2%;
+}
+.box3 img{
+    width: 100%;
 }
